--- a/Index.html
+++ b/Index.html
@@ -58,5 +58,6 @@
             <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.png" alt="instagram logo"></a></li>
         </ul>
     </main>
+    <script src="Mudar.js"></script>
 </body>
 </html>
